.jjconflict-side-0/apps/syncthing/base/netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: syncthing
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      ports:
        - port: http
          protocol: TCP
        - port: sync
          protocol: TCP
        - port: sync-udp
          protocol: UDP
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: syncthing
      app.kubernetes.io/name: syncthing
  policyTypes:
    - Ingress
